--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <img src="your_image.jpg" alt="Your Image">
+    <h1>Your Name</h1>
+    <a href="https://www.linkedin.com/in/yourlinkedinprofile">LinkedIn</a>   
+
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>HTML, CSS, JavaScript, Python, React, Node.js, SQL</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Project 1: Description</li>
+            <li>Project 2: Description</li>
+            <li>Project 3: Description</li>
+        </ul>
+    </section>   
+
     <script type="text/javascript" src="./script.js">
 </script>
 
